@@ -1,10 +1,18 @@
 `rarecurve` <-
     function(x, step = 1, sample, xlab = "Sample Size", ylab = "Species",
-             label = TRUE,...)
+             label = TRUE, col, lty, ...)
 {
+    ## sort out col and lty
+    if (missing(col))
+        col <- par("col")
+    if (missing(lty))
+        lty <- par("lty")
     tot <- rowSums(x)
     S <- specnumber(x)
     nr <- nrow(x)
+    ## rep col and lty to appropriate length
+    col <- rep(col, length.out = nr)
+    lty <- rep(lty, length.out = nr)
     ## Rarefy
     out <- lapply(seq_len(nr), function(i) {
         n <- seq(1, tot[i], by = step)
@@ -25,9 +33,9 @@
         abline(h = rare, lwd=0.5)
     }
     ## rarefaction curves
-    for(ln in seq_len(length(out))) {
+    for (ln in seq_len(length(out))) {
         N <- attr(out[[ln]], "Subsample")
-        lines(N, out[[ln]], ...)
+        lines(N, out[[ln]], col = col[ln], lty = lty[ln], ...)
     }
     ## label curves at their endpoitns
     if (label) {
